--- a/recipes/curare/meta.yaml
+++ b/recipes/curare/meta.yaml
@@ -29,6 +29,8 @@ requirements:
     - python =3.10
     - pyyaml =6.0
     - docopt =0.6.2
+    - progressbar2 =4.3.2
+    - biopython =1.83
 
 test:
   imports:
